config_file = configure_file(
    input: 'config.vala.in',
    output: 'config.vala',
    configuration: conf
)

resources = gnome.compile_resources(
    'resources',
    'web-archives.gresource.xml',
    c_name: 'web_archives',
    source_dir: [
        'src/app',
        join_paths(meson.build_root(), 'subprojects/darkreader')
    ],
    dependencies: [
        darkreader_dep
    ]
)

web_archives_sources = [
    'main.vala',
    'application.vala',
    'ui/window.vala',
    'ui/header-bar/header-bar.vala',
    'ui/header-bar/navigation-box.vala',
    'ui/header-bar/title-bar.vala',
    'ui/header-bar/search-bar.vala',
    'ui/header-bar/search-in-bar.vala',
    'ui/header-bar/bookmark-button.vala',
    'ui/header-bar/new-tab-button.vala',
    'ui/header-bar/menu-button.vala',
    'ui/header-bar/popover-menu.vala',
    'ui/header-bar/zoom-box.vala',
    'ui/header-bar/night-mode-button.vala',
    'ui/content/content.vala',
    'ui/content/home-view.vala',
    'ui/content/archive-row.vala',
    'ui/content/status-label.vala',
    'ui/content/notification-bar.vala',
    'ui/content/combo-box-text.vala',
    'ui/content/combo-box-row.vala',
    'ui/content/details-dialog.vala',
    'ui/content/web-view.vala',
    'ui/content/search-view.vala',
    'ui/content/search-result-row.vala',
    'ui/content/search-recent-row.vala',
    'ui/content/bookmark-view.vala',
    'ui/content/bookmark-row.vala',
    'ui/content/history-view.vala',
    'ui/content/history-row.vala',
    'ui/notebook/notebook-tab-label-with-state.vala',
    'states/context.vala',
    'states/route-state.vala',
    'states/new-tab-button-state.vala',
    'states/add-archive-button-state.vala',
    'states/popover-menu-state.vala',
    'states/title-state.vala',
    'states/archive-state.vala',
    'states/web-view-state.vala',
    'states/navigation-state.vala',
    'states/search-state.vala',
    'states/search-in-state.vala',
    'states/night-mode-state.vala',
    'states/bookmark-state.vala',
    'states/print-state.vala',
    'states/random-page-state.vala',
    'states/main-page-state.vala',
    'states/title-logic.vala',
    'states/navigation-logic.vala',
    'states/search-in-logic.vala',
    'states/search-bar-logic.vala',
    'states/bookmark-logic.vala',
    'states/random-logic.vala',
    'states/history-logic.vala',
    'states/main-page-logic.vala',
    'states/load-uri-logic.vala',
    'states/about-state.vala',
    'models/archive-store.vala',
    'models/archive-model.vala',
    'models/archive-item.vala',
    'models/bookmark-store.vala',
    'models/bookmark-model.vala',
    'models/bookmark-item.vala',
    'models/search-result-model.vala',
    'models/search-result-item.vala',
    'models/search-recent-store.vala',
    'models/search-recent-model.vala',
    'models/search-recent-item.vala',
    'models/library-model.vala',
    'models/library-item.vala',
    'models/language-store.vala',
    'models/language-model.vala',
    'models/language-item.vala',
    'models/history-store.vala',
    'models/history-model.vala',
    'models/history-item.vala',
    'utils/file-downloader.vala',
    'utils/archive-downloader.vala',
    'utils/library-parser.vala',
    'utils/language-formater.vala',
    'utils/tag-formater.vala',
    'utils/tag-parser.vala',
    'utils/archive-utils.vala',
    'utils/article-searcher.vala',
    'utils/css-loader.vala',
    'utils/zim-reader.vala',
    'persistence/persistence.vala',
    'persistence/database.vala',
    'persistence/archive-database.vala',
    'persistence/search-recent-database.vala',
    'persistence/bookmark-database.vala',
    'persistence/history-database.vala',
    'persistence/timestamp-database.vala',
    'services/server.vala',
    'services/tracker-service.vala',
    'services/remote.vala',
    'ui/gtk/notebook/notebook.vala',
    'ui/gtk/notebook/notebook-tab-label.vala',
    'ui/gtk/notebook/notebook-popup-menu.vala',
    'ui/gtk/file-chooser-native.vala',
    resources
]

executable(
    'web-archives',
    [config_file, web_archives_sources],
    c_args: [
        '-DGETTEXT_PACKAGE='+conf.get('GETTEXT_PACKAGE'),
        '-DHANDY_USE_UNSTABLE_API=true'
    ],
    dependencies: [
        gtk_dep,
        zim_dep,
        sqlite_dep,
        webkit_dep,
        soup_dep,
        tracker_dep,
        xml_dep,
        isocodes_dep,
        handy_dep
    ],
    install: true
)
